# dd-cli

./: .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
dd_cli/: cli.py  http.py
