[project]
name = "dd-cli"
version = "0.2.0"
description = "CLI for Datadog APIs (incidents, logs, and more)"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
  { name = "Jonathan Mohrbacher", email = "johnnymo87@gmail.com" }
]
dependencies = [
  "click>=8.1.8,<9.0.0",
  "httpx>=0.27.2,<0.28.0",
]

[project.scripts]
dd = "dd_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
force-exclude = true  # Respect excludes when pre-commit passes explicit filenames

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "TCH", # flake8-type-checking
]
ignore = [
  "E203", # whitespace before ':'
  "TC002", # Move third-party import into type-checking block
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.14.1",
  "pre-commit>=4.0.0",
]

